2004-06-23  Serge Droz <serge.droz@psi.ch>

	(committed by Lutz Mueller <lutz@users.sourceforge.net>)

        * libexif/olympus/mnote-olympus-entry.c: Reapply Jan Patera's 
          change.

2004-06-22  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus/mnote-olympus-entry.c: Correct the usage of 
	  strncat. Fix pointed out by Serge Droz <serge.droz@psi.ch>.

2004-06-22  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus/mnote-olympus-tag.[c,h]: New tags discovered by
	  Serge Droz <serge.droz@psi.ch>.

2004-06-15  Jan Patera <patera@users.sourceforge.net>

	* libexif/olympus/mnote-olympus-entry.c: MNOTE_OLYMPUS_TAG_INFO

2004-06-06  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus/exif-mnote-data-olympus.c: More documentation,
	  additional case (Nikon, 02 0a 00).
	* Makefile.am: s/LIBMNOTE/LIBEXIF

2004-05-27  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: 0.6.10 as 0.6.9 has just been released.

2004-05-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Jan Patera pointed me to the fact that
	  last change is pointless.

2004-05-27  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: According to Ralf Holzer <rholzer@cmu.edu>,
	  the user comment field does not have to be NULL terminated.

2004-05-25  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus/mnote-olympus-entry.c: Print bytes if tag is not
	  known.

2004-05-24  Jan Patera <patera@users.sourceforge.net>

	* libjpeg/jpeg-data.[c,h]: jpeg_data_append_section changed
	  from static to public
	* libexif/olumpus/mnote-olympus-entry.c: support of several
	  known but previously not supported Nikon (& 1 Olympus) tags
	* libexif/exif-entry.c: rational values printed as %2.2f and not %i/%i

2004-05-15  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-log.[c,h]: New. Proposal for handling of debugging
	  messages.

2004-05-13  Jan Patera <patera@users.sourceforge.net>
